<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddReminderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_add_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/add_title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_add_reminder_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/add_description"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/et_add_reminder_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_add_reminder_title"
            app:layout_constraintTop_toBottomOf="@+id/et_add_reminder_title" />

        <EditText
            android:id="@+id/et_add_reminder_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:drawableRight="@drawable/ic_date_range_24dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/et_add_reminder_desc"
            app:layout_constraintStart_toStartOf="@+id/et_add_reminder_desc"
            app:layout_constraintTop_toBottomOf="@+id/et_add_reminder_desc" />

        <EditText
            android:id="@+id/et_add_reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:drawableRight="@drawable/ic_access_time_24dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/time"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="@+id/et_add_reminder_date"
            app:layout_constraintStart_toStartOf="@+id/et_add_reminder_date"
            app:layout_constraintTop_toBottomOf="@+id/et_add_reminder_date" />


        <RelativeLayout
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/et_add_reminder_time"
            android:layout_marginTop="64dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/btn_add_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
           />
            <Button
                android:layout_below="@+id/btn_add_reminder"
                android:id="@+id/btn_save_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:visibility="gone"
                />

        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>